--- a/src/db.properties
+++ b/src/db.properties
@@ -1,4 +1,4 @@
-className=com.mysql.jdbc.Driver
-url=jdbc:mysql://localhost:3306/nbagw
-user=root
-password=a
+className =com.mysql.cj.jdbc.Driver
+url =jdbc:mysql://47.107.120.103/nba?useSSL=FALSE&serverTimezone=UTC
+user =root
+password =246800
